--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:RKiZjgudhub/bQEmvGi0LpjU+heiuxpVFdWqh4hW42U=
 APP_DEBUG=true
-APP_URL=http://localhost
-
+APP_URL=https://fyp.test
+FRONTEND_URL=https://smart-analytics.iamdevops.org
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=fyp
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -24,15 +24,6 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
-
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -45,3 +36,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp-mail.outlook.com
+MAIL_PORT=587
+MAIL_USERNAME=donotreply@ascend.com.sa
+MAIL_PASSWORD=fm.>b3DU@)N/J37v
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=donotreply@ascend.com.sa
+MAIL_FROM_NAME="${APP_NAME}"
